Make sure the clipped element is highlighted.

--- a/contao/html/sass/generalDriver.scss
+++ b/contao/html/sass/generalDriver.scss
@@ -16,7 +16,7 @@
     border-top: 0;
   }
 
-  .tl_folder_clipped > td {
+  .tl_listing tr.tl_folder_clipped > td {
     background-color: #fff9e6;
   }
 
